--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       </label>
       <div class="node">
         <input type="text" placeholder="Type" value="C">
+        <div class="valenceElectronsContainer">
+          <input type="number" class="valenceElectronsInput" oninput="updateValenceElectron(event)" index="0">
+          <input type="number" class="valenceElectronsInput" oninput="updateValenceElectron(event)" index="1">
+          <input type="number" class="valenceElectronsInput" oninput="updateValenceElectron(event)" index="2">
+          <input type="number" class="valenceElectronsInput" oninput="updateValenceElectron(event)" index="3">
+        </div>
       </div>
     </div>
   </body>
