--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@
   <body>
     <canvas id="canvas"></canvas>
     <div id="sidebar">
-      <button onclick="create()" id="drawButton">Draw and Generate</button>
-      <label id="autoDrawLabel">
-        Autodraw
-        <label class="switch">
-          <input type="checkbox" value="Autodraw" id="autodraw" checked>
-          <span class="slider round"></span>
-        </label>
-      </label>
+      <button onclick="create()" id="drawButton">Draw and Generate Code</button>
+      <input id="output" placeholder="Output"></input>
+      <button id="settingsButton" onclick="openSettings()">Settings</button>
       <div class="node">
         <input type="text" placeholder="Type" value="C">
         <div class="valenceElectronsContainer">
@@ -28,5 +23,30 @@
         </div>
       </div>
     </div>
+    <div id="settings">
+      <h1>Settings</h1>
+      <label class="settingsLabel">
+        Autodraw
+        <label class="switch">
+          <input type="checkbox" value="Autodraw" id="autodraw" checked>
+          <span class="slider round"></span>
+        </label>
+      </label>
+      <label class="settingsLabel">
+        Copy to clipboard
+        <label class="switch">
+          <input type="checkbox" value="Autodraw" id="copyClipboard" checked>
+          <span class="slider round"></span>
+        </label>
+      </label>
+      <label class="settingsLabel">
+        Language
+        <select id="language">
+          <option value="english">English</option>
+        </select>
+      </label>
+    </div>
+    <div id="settingsHide"></div>
+    <a href="https://github.com/Lasse-Tom-Lang" id="copywrite">&copy; Lasse Lang</a>
   </body>
 </html>
