Added captions and some refactoring

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <button id="settingsButton" onclick="openSettings()"></button>
       <div class="node">
         <input type="text" placeholder="" value="C" class="typeInput">
+        <input type="text" placeholder="" value="" class="captionInput">
         <div class="valenceElectronsContainer">
           <input type="number" class="valenceElectronsInput" oninput="updateValenceElectron(event)" index="0">
           <input type="number" class="valenceElectronsInput" oninput="updateValenceElectron(event)" index="1">
