Some code refactoring and improvement

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <canvas id="canvas"></canvas>
     <div id="sidebar">
       <button onclick="create()" id="drawButton"></button>
-      <input id="output"></input>
+      <input id="outputTextField"></input>
       <button id="settingsButton" onclick="openSettings()"></button>
       <div class="node">
         <input type="text" value="C" class="typeInput">
